# stream-bench

./: README.md  default.nix  stream-bench.cabal
bench/: Main.hs
cbits/: Baseline.c  Baseline.h
src/: Arrow.hs  Automaton.hs  Baseline.hs  Coroutine.hs  CoroutineLazy.hs  CoroutineStrict.hs  Signal.hs  SignalExistential.hs  SignalLazy.hs  SignalStrict.hs  Stream.hs  StreamLazy.hs  StreamStrict.hs
