name:                stream-bench
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Sven Keidel
maintainer:          svenkeidel@googlemail.com
category:            Sound
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Arrow,
                       Automaton,
                       Coroutine,
                       CoroutineStrict,
                       Signal,
                       SignalStrict,
                       Stream
  ghc-options:         -O2
  build-depends:       base >=4.7 && <4.8,
                       Stream,
                       arrows
  hs-source-dirs:      src
  default-language:    Haskell2010

benchmark bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Main.hs
  build-depends:       base,
                       criterion,
                       stream-bench
  ghc-options:         -Wall
                       -O2
  default-language:    Haskell2010
